projects/stencil/src/components/mds-text/mds-text.css
@import '~@maggioli-design-system/styles/dist/tailwind/typography.css';
@tailwind components;
@tailwind utilities;

:host ( .text-primary-h1 ) {
  @apply text-primary-h1;
}

:host ( .text-primary-h2 ) {
  @apply text-primary-h2;
}

:host ( .text-primary-h3 ) {
  @apply text-primary-h3;
}

:host ( .text-primary-h4 ) {
  @apply text-primary-h4;
}

:host ( .text-primary-h5 ) {
  @apply text-primary-h5;
}

:host ( .text-primary-h6 ) {
  @apply text-primary-h6;
}

:host ( .text-primary-action ) {
  @apply text-primary-action;
}

:host ( .text-secondary-paragraph ) {
  @apply text-secondary-paragraph;
}

:host ( .text-secondary-detail ) {
  @apply text-secondary-detail;
}

:host ( .text-secondary-caption ) {
  @apply text-secondary-caption;
}

:host ( .text-secondary-label ) {
  @apply text-secondary-label;
}

:host ( .text-secondary-option ) {
  @apply text-secondary-option;
}

:host ( .text-mono-code ) {
  @apply text-mono-code;
}

:host ( .text-mono-hack ) {
  @apply text-mono-hack;
}

.text {
  display: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: inherit;
}

:host ( .article ),
:host ( .blockquote ),
:host ( .dd ),
:host ( .details ),
:host ( .div ),
:host ( .dl ),
:host ( .dt ),
:host ( .figcaption ),
:host ( .h1 ),
:host ( .h2 ),
:host ( .h3 ),
:host ( .h4 ),
:host ( .h5 ),
:host ( .h6 ),
:host ( .label ),
:host ( .legend ),
:host ( .li ),
:host ( .ol ),
:host ( .p ),
:host ( .pre ),
:host ( .summary ),
:host ( .ul ) {
  @apply block;
}

:host ( .abbr ),
:host ( .address ),
:host ( .b ),
:host ( .bdo ),
:host ( .cite ),
:host ( .code ),
:host ( .del ),
:host ( .dfn ),
:host ( .em ),
:host ( .i ),
:host ( .ins ),
:host ( .kbd ),
:host ( .mark ),
:host ( .q ),
:host ( .rb ),
:host ( .rt ),
:host ( .ruby ),
:host ( .s ),
:host ( .samp ),
:host ( .small ),
:host ( .span ),
:host ( .strong ),
:host ( .sub ),
:host ( .sup ),
:host ( .time ),
:host ( .u ),
:host ( .var ) {
  @apply inline;

  line-height: inherit;
}

:host ( .code ) {
  @apply
    bg-adjust-tone-02
    bg-opacity-20
    px-1
    rounded;
}

abbr,
address,
article,
b,
bdo,
blockquote,
cite,
code,
dd,
del,
details,
dfn,
div,
dl,
dt,
em,
figcaption,
h1,
h2,
h3,
h4,
h5,
h6,
i,
ins,
kbd,
label,
legend,
li,
mark,
ol,
p,
pre,
q,
rb,
rt,
ruby,
s,
samp,
small,
span,
strong,
sub,
summary,
sup,
time,
u,
ul,
var,
wbr {
  margin: 0;
  overflow: inherit;
  text-overflow: inherit;
}

